Fixed the overflow bug on posts page... in theory...

--- a/src/app.css
+++ b/src/app.css
@@ -102,6 +102,7 @@ body {
     color: var(--text);
     font-size: 1.6rem;
     transition: var(--theme-transition);
+    overflow-x: hidden;
 }
 
 #markdown,
